# RasPi-ICSN-gateway

./: .gitignore  BUILD.md  CMakeLists.txt  README.md  raspi-gateway-design.md
.claude/: settings.local.json
include/: cefore_interface.h  gateway_fib.h  main_controller.h  name_mapper.h  packet_parser.h  uart_receiver.h
include/infrastructure/data_access/: FixedSizeLRUCache.hpp
src/: cefore_interface.cpp  gateway_fib.cpp  main.cpp  main_controller.cpp  name_mapper.cpp  packet_parser.cpp  test_uart_parser.cpp  uart_receiver.cpp
